# OfferCatcher

./: .gitignore  CLAUDE.md  README.md  compose.yaml  pom.xml  prometheus.yml  pyproject.toml  spotbugs-exclude.xml
config/: position_mappings.json
docs/: Agent 优秀论文 2025-2026.md  Claude上下文工程.md  当前执行计划.md
docs/存储模块/: 异步面经解析与答案生成.md
docs/记忆模块/: AgentScope记忆设计.md  Claude记忆设计详解.md  当前记忆模块研究现状.md
docs/评测日志/: RAG中是否嵌入答案.md
docs/面试模块/: 面试 Agent.md  题目推荐系统.md
scripts/: backup.py  compensate_mq.py  convert_reranker_to_onnx.py
services/ocr-service/: Dockerfile  main.py  requirements.txt
src/main/java/com/zju/offercatcher/: OfferCatcherApplication.java
src/main/java/com/zju/offercatcher/application/agent/: AnswerSpecialistAgent.java  ChatAgent.java  ChatAgentService.java  InterviewAgent.java  InterviewAgentService.java  JobDescriptionParserAgent.java  MemoryAgentService.java  MemoryExtractionAgent.java  MemoryRetrievalAgent.java  PositionNormalizationAgent.java  PromptLoader.java  ResumeAnalysisAgent.java  ScorerAgent.java  SkillKeywordExpanderAgent.java  TitleGeneratorAgent.java  VisionExtractorAgent.java
src/main/resources/: application.properties
src/main/resources/prompts/: answer_specialist.md  interview_evaluate.md  interview_hint.md  interviewer_system.md  jd_parser.md  memory_agent.md  react_agent.md  scorer.md  title_generator.md  vision_extractor.md
src/test/java/com/zju/offercatcher/: OfferCatcherApplicationTests.java
src/test/java/com/zju/offercatcher/integration/: OfferCatcherEndToEndTest.java
src/test/resources/: application.properties
(+229 files in other folders)
